Add environment configuration files for client and server
- Created .env.txt for client with VITE_API_BASE_URL
- Created .env.txt for server with MONGO_URI, JWT_SECRET, PORT, CORS_ORIGIN, and NODE_ENV

--- a/packages/client/Dockerfile
+++ b/packages/client/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 ARG VITE_API_BASE
 ENV VITE_API_BASE=${VITE_API_BASE}
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN npm ci || npm install
 COPY . .
 RUN npm run build
 
