--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - server
     ports:
-      - "5173:5173"
+      - "5173:80"   # ← 映射宿主 5173 到容器 80（Nginx）
 
 volumes:
   glads-mongo-data:
