fix(client): resolve Dockerized Vite+Nginx blank screen - multi-stage Dockerfile with build-time VITE_API_BASE_URL - nginx SPA fallback + assets route - vite base=/ and axios baseURL from env - compose maps 5173:80 and passes build args

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
   client:
     build:
       context: ./packages/client
+      args:
+        - VITE_API_BASE_URL=http://localhost:8080/api   # build-time injection
     container_name: glads-client
     env_file:
       - ./packages/client/.env
