--- a/packages/client/Dockerfile
+++ b/packages/client/Dockerfile
@@ -1,16 +1,17 @@
-# Build static assets
-FROM node:18-alpine AS build
+# ---------- build stage ----------
+FROM node:20-alpine AS build
 WORKDIR /app
-ARG VITE_API_BASE
-ENV VITE_API_BASE=${VITE_API_BASE}
 COPY package.json package-lock.json* ./
 RUN npm ci || npm install
 COPY . .
+# inject Vite env at build time
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
 RUN npm run build
 
-# Serve with nginx
-FROM nginx:alpine
+# ---------- runtime stage (nginx) ----------
+FROM nginx:1.25-alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
 
