--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,5 +1,6 @@
 MONGO_URI=mongodb://mongo:27017/glads
-JWT_SECRET=change-me-to-a-long-random-string
+JWT_SECRET=change-me
 PORT=8080
 CORS_ORIGIN=http://localhost:5173
 NODE_ENV=development
+
