--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -6,7 +6,7 @@ server {
 
   # SPA fallback
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 
   # Static assets should never fallback to index.html
@@ -15,4 +15,3 @@ server {
     access_log off;
   }
 }
-
